--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,15 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- BDD syntax -->
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest</artifactId>
+            <version>3.0</version>
+            <scope>test</scope>
+        </dependency>
+
+
     </dependencies>
 
 </project>
