--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,16 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- BDD syntax -->
+        <!-- add the dep that contains the extension for jUnit5 -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>5.12.0</version>
+            <scope>test</scope>
+        </dependency>
+
+
+        <!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest -->
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest</artifactId>
