PowerMock and Mockito Integration

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <groupId>com.in28minutes.junit</groupId>
     <artifactId>JUnit</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>powermock</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
